fix: hide avatar on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const recentPosts = (await getPublishedPosts()).slice(0, 5);
       <img
         src={AVATAR}
         alt={SITE_CONFIG.name}
-        class="w-16 h-16 sm:w-32 sm:h-32 rounded-md object-cover shrink-0"
+        class="hidden sm:block sm:w-32 sm:h-32 rounded-md object-cover shrink-0"
       />
     </div>
   </section>
